--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
     "expo": "~40.0.0",
+    "expo-av": "~8.7.0",
     "expo-device": "~2.4.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
@@ -23,7 +24,8 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-vector-icons": "^8.0.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.3.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
