--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-av": "~8.7.0",
     "expo-device": "~2.4.0",
@@ -23,6 +24,7 @@
     "react-native-responsive-fontsize": "^0.5.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12",
     "react-native-webview": "^11.3.2"
